--- a/clinicalpaii/pom.xml
+++ b/clinicalpaii/pom.xml
@@ -5,7 +5,7 @@
     <!-- Project from https://start.vaadin.com/project/77147dd1-c808-4584-a50a-622ea04b78e9 -->
     <groupId>hn.clinica</groupId>
     <artifactId>clinicalpaii</artifactId>
-    <name>clinicalpaii</name>
+    <name>clinicalpaii1234</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
